[package]
name = "superbuffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snarkvm = "*"
rand = "0.8"
tokio = {version = "1", features = ["full"]} 
axum = { version = "0.6", features = ["ws"]}
axum-extra = {version = "0.3"}
serde = "1"
serde_json = "1"
ureq = "2"
anyhow = "1"
futures = {version = "0.3"}
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.clap]
version = "3.2"
features = ["derive"]